# parsercise

./: CHANGELOG.md  README.md  parsercise.cabal
src/challenge/: Parser.hs
src/lib/: Value.hs
src/lib/Parser/: Type.hs
src/solution/: Parser.hs
test/: Spec.hs
