cabal-version:      3.4
name:               parsercise
version:            0.1.0.0
description:
  Please see the README on GitHub at <https://github.com/paolino/parsercise#readme>

homepage:           https://github.com/paolino/parsercise#readme
bug-reports:        https://github.com/paolino/parsercise/issues
author:             paolino
maintainer:         paolo.veronelli@gmail.com
copyright:          2023 Paolo Veronelli
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/paolino/parsercise

common common-options
  build-depends:
    , base
    , containers
    , mtl
    , tree-diff

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints
    -Wmissing-export-lists -Wpartial-fields -fhide-source-paths

  default-language:   Haskell2010
  default-extensions:
    ConstraintKinds
    DeriveGeneric
    DerivingStrategies
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    ViewPatterns

library
  import:          common-options
  exposed-modules:
    Parser.Type
    Value

  hs-source-dirs:  src/lib

library solution
  import:          common-options
  exposed-modules: Parser
  hs-source-dirs:  src/solution
  build-depends:   parsercise

library challenge
  import:          common-options
  exposed-modules: Parser
  hs-source-dirs:  src/challenge
  build-depends:   parsercise

test-suite test-solution
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , parsercise:{parsercise, solution}
    , pretty

test-suite test-challenge
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , parsercise:{parsercise, challenge}
    , pretty
